2010-11-05  Robert Millan  <rmh@gnu.org>

	* util/grub-mkconfig.in: Remove gfxterm.mod probe (no longer
	needed).

2010-11-05  Robert Millan  <rmh@gnu.org>

	On Yeeloong, pass machine type information to Linux.

	* grub-core/loader/mips/linux.c [GRUB_MACHINE_MIPS_YEELOONG]
	(LOONGSON_MACHTYPE): New macro, set to
	"machtype=lemote-yeeloong-2f-8.9inches".
	[LOONGSON_MACHTYPE] (grub_cmd_linux): Pass LOONGSON_MACHTYPE as
	additional argument to Linux.

2010-11-04  Robert Millan  <rmh@gnu.org>

	* util/deviceiter.c (grub_util_iterate_devices): Increase SCSI
	limit to 48 (to cope with Sun Fire X4500), and IDE limit to 96
	(its SATA disks are detected as slaveless IDE master drives on
	kFreeBSD).
	Reported by Carsten Aulbert.

2010-11-02  Colin Watson  <cjwatson@ubuntu.com>

	* util/bin2h.c (main): Fix spelling error in generated output.

2010-11-01  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* grub-core/partmap/bsdlabel.c (iterate_real): Fix an integer overflow.

2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_cmd_linux): Autoload vbe.mod if
	vga= option is supplied.

2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_hurd.in: Don't call savedefault on recovery entries.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_linux.in: Likewise.
	* util/grub.d/20_linux_xen.in: Likewise.

2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/arg.c (grub_arg_parse): Avoid interpreting direct
	argument as an argument to no-argument option.

2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_linux.in: Add missing load_video with explicit
	GRUB_GFXPAYLOAD_LINUX.

2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am (libgrub.pp): Propagate the libgrub.a split.

2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Do not put
	elements with invlid index.